Fixed the following bugs in the devices filtering
- Filtering by date\time works incorrectly
- After filtering with no results for such option message is repeating
- Duplication of device class at detail view page
- Wrong mouse pointer when hovering at Devices\Network links
- Data field has broken layout

--- a/css/style-custom.css
+++ b/css/style-custom.css
@@ -34,8 +34,7 @@ table {
 }
 /*static text for forms when fields are not shown*/
 .form-static-text  {
-    padding-top: 10px;
-    height: 39px;
+    padding-top: 6px;
     padding-left: 13px;
 }
 .datetime-filter-area {
@@ -76,4 +75,9 @@ table {
     margin: 200px auto 0;
     background: top center url(images/loadera64.gif) no-repeat;
     height: 70px;
+}
+
+.navbar-nav
+{
+	cursor: pointer;	
 }
